Add integration tests; fix models & service
Add integration tests for ShopService and UserService covering shop/user lifecycle, restocking, deletion/unlinking behavior, anonymization and metrics. Adjust model mappings and initializations: remove explicit @JoinColumn on Truck.address and User.selectedShop to rely on default mapping, and initialize User.roles to an empty HashSet to avoid null roles. Harden ShopService image deletion by checking for null image and null S3 key before calling imageService.deleteFile.